# Cope

./: .coveragerc  .gitignore  Doxyfile  README.md  notes.txt  pyproject.toml  requirements.txt  setup.py  todo
.github/workflows/: python-package.yml  unit-tests.yml
Cope/: __init__.py  _config.py  _named_colors.py  bak.py  boilerplate.py  colors.py  constants.py  debugging.py  decorators.py  errors.py  func.py  geometry.py  gym.py  imports.py  iterables.py  key.py  linalg.py  logging.py  math.py  meme.py  misc.py  named_colors.py  plotly.py  pygame.py  streamlit.py  style.cfg  sympy.py  tmp.py  util.py
Cope.egg-info/: PKG-INFO  SOURCES.txt
Cope/experimental/: _None.py  __init__.py  colors.py  constants.py  data.py  debugging.py  func.py  geometry.py  imports.py  iterables.py  key.py  linalg.py  logging.py  misc.py  point.py  pygame.py  timing.py
Cope/old/: data.py  imports.py  iterables.py
docs/: Cope.html
docs/html/: Psuedonym_8py.html  Psuedonym_8py_source.html  ____init_____8py.html  ____init_____8py_source.html  __config_8py.html  __config_8py_source.html  annotated.html  annotated_dup.js  boilerplate_8py.html  boilerplate_8py_source.html  classCope_1_1boilerplate_1_1CommonResponses-members.html  classCope_1_1boilerplate_1_1CommonResponses.html  classCope_1_1boilerplate_1_1CommonResponses_a0f68cbb00039d4353d8e7e48a3522556.html  classCope_1_1boilerplate_1_1CommonResponses_a5e64eb2a591fae950e7837af303db7e7.html  classCope_1_1boilerplate_1_1CommonResponses_a83da47eb493013621464b4a369f0a42b.html  classCope_1_1boilerplate_1_1CommonResponses_a9307da835ff73c6856612ea0870e805a.html  classCope_1_1boilerplate_1_1CommonResponses_a93ff6253b0e938beb897a7808898c9d8.html  classCope_1_1boilerplate_1_1CommonResponses_ab21d4fddc2e5b8c182e2c728aa0689ae.html  classCope_1_1boilerplate_1_1CommonResponses_abf1d96033e22af331d5de24e8b7c331d.html  classCope_1_1boilerplate_1_1CommonResponses_ac376063f9bb43efc3ae85c54d6acac2f.html  classCope_1_1debugging_1_1Debug-members.html  classCope_1_1debugging_1_1Debug.html  classCope_1_1debugging_1_1Debug.js  classCope_1_1debugging_1_1Debug_af73223218a5ac15cd41652be99004f60.html  classCope_1_1debugging_1_1Debug_af7b28323014969a09fde70b02d35ee14.html  classCope_1_1debugging_1_1Undefined.html  classCope_1_1decorators_1_1EpistemologicalWarning.html  classCope_1_1decorators_1_1EpistemologicalWarning__coll__graph.md5  classCope_1_1decorators_1_1EpistemologicalWarning__inherit__graph.map  classCope_1_1experimental_1_1Psuedonym_1_1Psuedonym-members.html  classCope_1_1experimental_1_1Psuedonym_1_1Psuedonym.html  classCope_1_1experimental_1_1Psuedonym_1_1Psuedonym__coll__graph.map  classCope_1_1experimental_1_1Psuedonym_1_1Psuedonym__coll__graph.md5  classCope_1_1experimental_1_1Psuedonym_1_1Psuedonym_a6288da584f94259523820cf5c43f89ed.html  classCope_1_1experimental_1_1Psuedonym_1_1Psuedonym_acd3d0e5a78ca3fdf5ce57b6c644baeb9.html  classCope_1_1experimental_1_1__config_1_1__ConfigSingleton-members.html  classCope_1_1experimental_1_1__config_1_1__ConfigSingleton.html  (+372 more)
experimental/: Psuedonym.py  debugging.py  decorators.py  imports.py  logging.py  misc.py  timing.py
tests/: colors_test.py  debug_test.py  decorators_test.py  gym_test.py  imports_test.py  meme_test.py  misc_test.py  sympy_test.py  test_colors.py  test_debugging.py  test_decorators.py  test_func.py  test_geometry.py  test_imports.py  test_misc.py  test_point.py  test_psuedonym.py  test_replace_lines.py
tests/manual tests/: gym.py  imports.py  meme.py  misc.py  plotly.py  (+1 more)
(+100 files in other folders)
