[metadata]
name = 'Cope'
version = '1.2.1'
description = 'A bunch of generic functions and classes useful in multiple projects'
author = 'Copeland Carter'
author_email = 'smartycope@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/smartycope/Cope'

[requires]
python_version = ['3.10', '3.11', '3.6', '3.7', '3.8', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
