[metadata]
author = 'Copeland Carter'
author_email = 'smartycope@gmail.com'
license = 'MIT'
url = 'https://github.com/smartycope/Cope'

[requires]
python_version = ['3.10', '3.11', '3.6', '3.7', '3.8', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel', 'hatchling']
build-backend = "hatchling.build"

[tool.hatch.commands]
prerelease = 'hatch build'

[project]
name = 'Cope'
version = '2.4.0'
description = 'A bunch of generic functions and classes useful in multiple projects'
dependencies = [
    'varname',
    'rich',
]

[project.optional-dependencies]
linalg = [
  'sympy'
]
